added cart icons to about and store pages

--- a/public/about.html
+++ b/public/about.html
@@ -9,9 +9,17 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header class="main-header">
+      <div class="shopping-cart-icon">
+        <p id="cart-item-amount">10</p>
+        <p><i class="fa fa-shopping-cart" aria-hidden="true"></i></p>
+      </div>
       <nav class="nav main-nav">
         <ul>
           <li><a href="index.html">HOME</a></li>
