--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       <!--button type="button" class="btn btn-header btn-play">&#9658;</button-->
     </header>
     <section class="content-section container">
-      <h2 class="section-header">Mama's Specials</h2>
+      <h2 class="section-header">Today's Specials</h2>
       <div>
         <div class="tour-row">
           <span class="tour-item tour-date"
