desing div added for adding desing to clothen ordering

--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,15 @@
     .options-title {
       font-size: 1.5rem;
     }
-    .fabric-option {
+    .fabric-option,
+    .clothen-type-option,
+    .design-option {
       display: flex;
       justify-content: center;
     }
-    .fabric-image {
+    .fabric-image,
+    .clothen-type-image,
+    .design-image {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -112,10 +116,10 @@
       </div>
       <div class="fabric-selection">
         <h2 class="section-header options-title">
-          <img
+          <!--img
             src="icons/icons8-gender-100.png"
             style="width: 25px; height: 25px;"
-          />
+          /-->
           Pick A Fabric
         </h2>
         <div class="fabric-option">
@@ -126,7 +130,57 @@
             />
           </div>
           <div class="fabric-desc">
-            <p>Name</p>
+            <p>Fabric Name</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui,
+              expedita nam quae...
+            </p>
+            <p>$0.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="clothen-type-selection">
+        <h2 class="section-header options-title">
+          <!--img
+            src="icons/icons8-gender-100.png"
+            style="width: 25px; height: 25px;"
+          /-->
+          Pick Clothen Type
+        </h2>
+        <div class="clothen-type-option">
+          <div class="clothen-type-image">
+            <img
+              src="Images/ShirtCloth.webp"
+              style="width: 50px; height: 50px;"
+            />
+          </div>
+          <div class="clothen-type-desc">
+            <p>Clothen type Name</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui,
+              expedita nam quae...
+            </p>
+            <p>$0.00</p>
+          </div>
+        </div>
+      </div>
+      <div class="design-selection">
+        <h2 class="section-header options-title">
+          <!--img
+            src="icons/icons8-gender-100.png"
+            style="width: 25px; height: 25px;"
+          /-->
+          Add Your Design
+        </h2>
+        <div class="design-option">
+          <div class="design-image">
+            <img
+              src="Images/DesignImage.jpg"
+              style="width: 50px; height: 50px;"
+            />
+          </div>
+          <div class="desing-desc">
+            <p>Desing Name</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui,
               expedita nam quae...
