--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,17 @@
       <!--button type="button" class="btn btn-header btn-play">&#9658;</button-->
     </header>
     <section class="content-section container">
+      <p
+        style="
+          max-width: 500px;
+          margin: auto;
+          margin-top: 20px;
+          text-align: center;
+        "
+      >
+        Our platform helps you build and order your own customized african
+        clothen. Follow the steps below to order your clothen
+      </p>
       <div id="genderDiv">
         <h2 class="section-header options-title">
           <img
