--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
       flex-direction: column;
       justify-content: center;
       margin-right: 20px;
+      margin-left: 10px;
     }
     .next_previous_btns {
       display: flex;
@@ -80,9 +81,11 @@
     }
     .SelectedOption {
       background-color: lightblue;
+      border: 0.5px solid rgb(89, 89, 117);
     }
     .DeselectedSelectedOption {
       background-color: white;
+      border: none;
     }
   </style>
   <body>
