--- a/public/about.html
+++ b/public/about.html
@@ -15,6 +15,10 @@
     />
   </head>
   <body>
+    <div class="CheckoutCart">
+      <p class="CloseShoppingCartBtn">X</p>
+      <h2 style="text-align: center;">Shopping Cart</h2>
+    </div>
     <header class="main-header">
       <div class="shopping-cart-icon">
         <p id="cart-item-amount">10</p>
@@ -82,5 +86,6 @@
         </ul>
       </div>
     </footer>
+    <script src="cart_scripts.js"></script>
   </body>
 </html>
