--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
     .design-option {
       display: flex;
       justify-content: center;
+      cursor: pointer;
     }
     .fabric-image,
     .clothen-type-image,
@@ -67,6 +68,11 @@
       justify-content: center;
       margin-right: 20px;
       margin-left: 10px;
+    }
+    .display_image {
+      width: 50px;
+      height: 50px;
+      overflow: hidden;
     }
     .next_previous_btns {
       display: flex;
@@ -87,8 +93,19 @@
       background-color: white;
       border: none;
     }
+    .design_step_desc {
+      text-align: center;
+      max-width: 500px;
+      margin: auto;
+      margin-bottom: 20px;
+      color: rgb(158, 92, 31);
+    }
   </style>
   <body>
+    <div class="CheckoutCart">
+      <p class="CloseShoppingCartBtn">X</p>
+      <h2 style="text-align: center;">Shopping Cart</h2>
+    </div>
     <header class="main-header">
       <div class="shopping-cart-icon">
         <p id="cart-item-amount">10</p>
@@ -134,6 +151,10 @@
           />
           Pick Your Gender
         </h2>
+        <p class="design_step_desc">
+          Selecting gender helps the platform to filter your options throughout
+          the your clothen build process
+        </p>
         <div class="gender-selection">
           <div class="gender-option">
             <p>
@@ -166,16 +187,22 @@
           /-->
           Pick A Fabric
         </h2>
+        <p class="design_step_desc">
+          Pick a fabric of your choice. Your clothen will be sewed in that
+          fabric.
+        </p>
         <div
           id="IDFromDB1"
           onclick='setFabricSelected("IDFromDB1");'
           class="fabric-option DeselectedSelectedOption"
         >
           <div class="fabric-image">
-            <img
-              src="Images/AfricanFabric.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/AfricanFabric3.webp"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="fabric-desc">
             <p>Fabric Name</p>
@@ -192,10 +219,12 @@
           class="fabric-option"
         >
           <div class="fabric-image">
-            <img
-              src="Images/AfricanFabric.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/African-cloth2.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="fabric-desc">
             <p>Fabric Name</p>
@@ -212,10 +241,12 @@
           class="fabric-option"
         >
           <div class="fabric-image">
-            <img
-              src="Images/AfricanFabric.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/AfricanFabric.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="fabric-desc">
             <p>Fabric Name</p>
@@ -242,16 +273,21 @@
           /-->
           Pick Clothen Type
         </h2>
+        <p class="design_step_desc">
+          What type of clothen do you want sewed for you?
+        </p>
         <div
           id="CTIDFromDB1"
           onclick='setCTypeSelected("CTIDFromDB1");'
           class="clothen-type-option"
         >
           <div class="clothen-type-image">
-            <img
-              src="Images/ShirtCloth.webp"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/ShirtCloth.webp"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="clothen-type-desc">
             <p>Clothen type Name</p>
@@ -268,10 +304,12 @@
           class="clothen-type-option"
         >
           <div class="clothen-type-image">
-            <img
-              src="Images/ShirtCloth.webp"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/ClothenType2.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="clothen-type-desc">
             <p>Clothen type Name</p>
@@ -288,10 +326,12 @@
           class="clothen-type-option"
         >
           <div class="clothen-type-image">
-            <img
-              src="Images/ShirtCloth.webp"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/ClothenType3.webp"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="clothen-type-desc">
             <p>Clothen type Name</p>
@@ -318,16 +358,23 @@
           /-->
           Add Your Design
         </h2>
+        <p class="design_step_desc">
+          Pick a design that will be added to your clothen. These designs are
+          those placed in the middle and edges of clothen. For example, clothen
+          chest, arms, neck, back, etc. designs.
+        </p>
         <div
           id="DSNIDFromDB1"
           onclick='setDTypeSelected("DSNIDFromDB1");'
           class="design-option"
         >
           <div class="design-image">
-            <img
-              src="Images/DesignImage.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/AfroDesing2.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="desing-desc">
             <p>Desing Name</p>
@@ -344,10 +391,12 @@
           class="design-option"
         >
           <div class="design-image">
-            <img
-              src="Images/DesignImage.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/AfroDesign3.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="desing-desc">
             <p>Desing Name</p>
@@ -364,10 +413,12 @@
           class="design-option"
         >
           <div class="design-image">
-            <img
-              src="Images/DesignImage.jpg"
-              style="width: 50px; height: 50px;"
-            />
+            <div class="display_image">
+              <img
+                src="Images/DesignImage.jpg"
+                style="width: 50px; height: auto;"
+              />
+            </div>
           </div>
           <div class="desing-desc">
             <p>Desing Name</p>
@@ -481,5 +532,6 @@
       </div>
     </footer>
     <script src="design.js"></script>
+    <script src="cart_scripts.js"></script>
   </body>
 </html>
